[package]
name = "graft"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "graft"
path = "src/main.rs"

[lib]
name = "graft"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
yaml_serde = "0.10"
toml = "1"
dirs = "6"
dialoguer = "0.12"
inquire = "0.9"
colored = "3"

[dev-dependencies]
tempfile = "3"
